@@ -1,6 +1,5 @@
 package com.atlassian.oai.validator.example.async;
 
-import com.google.common.collect.ImmutableMap;
 import org.junit.jupiter.api.Test;
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.boot.resttestclient.autoconfigure.AutoConfigureRestTestClient;
@@ -32,13 +31,12 @@ public class RestRequestValidationTest {
 
     @Test
     public void testGet_success() {
-        final Map<String, List<String>> additionalHeaders = ImmutableMap
-                .of("headerValue", singletonList("valueHeader"));
+        final Map<String, List<String>> additionalHeaders = Map.of("headerValue", singletonList("valueHeader"));
         final ResponseEntity<HashMap> response = restRequest("/spring/variablePath?requestParam=paramRequest",
                 HttpMethod.GET, null /* no body */, additionalHeaders);
 
         // then: 'the response contains the header, path variable and query parameter'
-        final Map<String, Object> expectedBody = ImmutableMap.of("headerValue", "valueHeader",
+        final Map<String, Object> expectedBody = Map.of("headerValue", "valueHeader",
                 "pathVariable", "variablePath",
                 "requestParam", "paramRequest");
         assertOkRequest(response, expectedBody);
@@ -46,13 +44,12 @@ public class RestRequestValidationTest {
 
     @Test
     public void testGet_timeout() {
-        final Map<String, List<String>> additionalHeaders = ImmutableMap
-                .of("headerValue", singletonList("valueHeader"));
+        final Map<String, List<String>> additionalHeaders = Map.of("headerValue", singletonList("valueHeader"));
         final ResponseEntity<HashMap> response = restRequest("/spring/timeout?requestParam=paramRequest",
                 HttpMethod.GET, null /* no body */, additionalHeaders);
 
         // then: 'the response contains the header, path variable and query parameter'
-        final Map<String, Object> expectedBody = ImmutableMap.of("headerValue", "timeout",
+        final Map<String, Object> expectedBody = Map.of("headerValue", "timeout",
                 "pathVariable", "timeout",
                 "requestParam", "timeout");
         assertOkRequest(response, expectedBody);
@@ -71,8 +68,7 @@ public class RestRequestValidationTest {
 
     @Test
     public void testGet_invalidResponse() {
-        final Map<String, List<String>> additionalHeaders = ImmutableMap
-                .of("headerValue", singletonList("valueHeader"));
+        final Map<String, List<String>> additionalHeaders = Map.of("headerValue", singletonList("valueHeader"));
         final ResponseEntity<HashMap> response = requestWithInvalidResponse("/spring/variablePath?requestParam=paramRequest",
                 HttpMethod.GET, null /* no body */, additionalHeaders);
 
@@ -87,8 +83,8 @@ public class RestRequestValidationTest {
 
     @Test
     public void testPost_success() {
-        final Map<String, Object> sendBody = ImmutableMap.of("string", "text",
-                "integer", 1022, "object", ImmutableMap.of("boolean", true));
+        final Map<String, Object> sendBody = Map.of("string", "text",
+                "integer", 1022, "object", Map.of("boolean", true));
         final ResponseEntity<HashMap> response = restRequest(
                 "/spring", HttpMethod.POST, sendBody);
 
@@ -98,7 +94,7 @@ public class RestRequestValidationTest {
 
     @Test
     public void testPost_invalidRequest() {
-        final Map<String, Object> sendBody = ImmutableMap.of("integer", "noInteger");
+        final Map<String, Object> sendBody = Map.of("integer", "noInteger");
         final ResponseEntity<HashMap> response = restRequest("/spring",
                 HttpMethod.POST, sendBody);
 
@@ -113,8 +109,8 @@ public class RestRequestValidationTest {
 
     @Test
     public void testPost_invalidResponse() {
-        final Map<String, Object> sendBody = ImmutableMap.of("string", "text",
-                "integer", 1022, "object", ImmutableMap.of("boolean", true));
+        final Map<String, Object> sendBody = Map.of("string", "text",
+                "integer", 1022, "object", Map.of("boolean", true));
         final ResponseEntity<HashMap> response = requestWithInvalidResponse(
                 "/spring", HttpMethod.POST, sendBody, Collections.emptyMap());
 
@@ -129,13 +125,13 @@ public class RestRequestValidationTest {
 
     @Test
     public void testPut_success() {
-        final Map<String, Object> sendBody = ImmutableMap.of("putValue", "valuePut");
+        final Map<String, Object> sendBody = Map.of("putValue", "valuePut");
         final ResponseEntity<HashMap> response = restRequest("/spring/variablePath",
                 HttpMethod.PUT, sendBody);
 
         // then: 'the response contains a copy of the request including the path parameter'
-        final Map<String, Object> expectedBody = ImmutableMap.<String, Object>builder()
-                .putAll(sendBody).put("pathVariable", "variablePath").build();
+        final Map<String, Object> expectedBody = new java.util.HashMap<>(sendBody);
+        ((java.util.HashMap<String, Object>) expectedBody).put("pathVariable", "variablePath");
         assertOkRequest(response, expectedBody);
     }
 
@@ -149,7 +145,7 @@ public class RestRequestValidationTest {
 
     @Test
     public void testPut_invalidResponse() {
-        final Map<String, Object> sendBody = ImmutableMap.of("putValue", "valuePut");
+        final Map<String, Object> sendBody = Map.of("putValue", "valuePut");
         final ResponseEntity<HashMap> response = requestWithInvalidResponse("/spring/variablePath",
                 HttpMethod.PUT, sendBody, Collections.emptyMap());
 
@@ -192,7 +188,7 @@ public class RestRequestValidationTest {
     }
 
     private ResponseEntity<HashMap> restRequest(final String uri, final HttpMethod method, final Object body) {
-        return restRequest(uri, method, body, ImmutableMap.of());
+        return restRequest(uri, method, body, Map.of());
     }
 
     private ResponseEntity<HashMap> restRequest(final String uri, final HttpMethod method, final Object body,
